update to dotnet9, bump packages
minor fixes

--- a/RichWebApi.Application/appsettings.Development.json
+++ b/RichWebApi.Application/appsettings.Development.json
@@ -7,5 +7,24 @@
 				"Microsoft.AspNetCore.SignalR": "Debug"
 			}
 		}
-	}
+	},
+  "Dependencies": {
+    "Database": {
+      "Connection": {
+        "Host": "localhost",
+        "Port": 51010,
+        "Username": "sa",
+        "Password": "RichWebApi-dev",
+        "DbInstanceIdentifier": "RichWebApi",
+        "Retries": 1,
+        "Timeout": 10,
+        "Additional": ["Encrypt=false",
+          "Persist Security Info=False",
+          "MultipleActiveResultSets=True"]
+      },
+      "Entities": {
+        "Validation": "Required"
+      }
+    }
+  }
 }
