--- a/RichWebApi.Application/appsettings.json
+++ b/RichWebApi.Application/appsettings.json
@@ -1,18 +1,20 @@
 {
-	"Serilog": {
-		"MinimumLevel": {
-			"Default": "Information"
-		}
-	},
-	"AllowedHosts": "*",
-	"Services": {
-		"WeatherWeekFiller": {
-			"Schedule": "0 0 * * *"
-		}
-	},
-	"Database": {
-		"Entities": {
-			"Validation": "Required"
-		}
-	}
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information"
+    }
+  },
+  "AllowedHosts": "*",
+  "Services": {
+    "WeatherWeekFiller": {
+      "Schedule": "0 0 * * *"
+    }
+  },
+  "Dependencies": {
+    "Database": {
+      "Entities": {
+        "Validation": "Required"
+      }
+    }
+  }
 }
